--- a/example/storybook/src/components/Center/index.stories.mdx
+++ b/example/storybook/src/components/Center/index.stories.mdx
@@ -7,7 +7,7 @@ pageDescription: This is a generic component for low level layout needs to cente
 
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title="components/Box" />
+<Meta title="components/Center" />
 
 import { Center, Text } from './Center';
 import { transformedCode } from '../../utils';
@@ -81,7 +81,7 @@ The center component consists of the following parts:
 ```jsx
 export default () => (
   <Center>
-    <Text>Box</Text>
+    <Text>Center</Text>
   </Center>
 );
 ```
@@ -112,7 +112,7 @@ import { Root } from './components/Center';
 // mapping the Center to root component
 const Center = Root;
 
-// Using the box component
+// Using the Center component
 export default () => (
   <Center>
     <Text />
