--- a/example/storybook/src/components/Center/index.stories.mdx
+++ b/example/storybook/src/components/Center/index.stories.mdx
@@ -11,12 +11,7 @@ import { Meta } from '@storybook/addon-docs';
 
 import { Center, Text } from './Center';
 import { transformedCode } from '../../utils';
-import {
-  AppProvider,
-  CodePreview,
-  Table,
-  Text,
-} from '@gluestack/design-system';
+import { AppProvider, CodePreview, Table } from '@gluestack/design-system';
 
 import { styled } from '@dank-style/react';
 
@@ -65,8 +60,7 @@ export default () => (
       },
       scope: {
         Wrapper,
-        Center,
-        Text,
+        CenterText,
       },
       argsType: {},
     }}
