feat: pushed switch:

--- a/example/storybook/src/components/Center/index.stories.mdx
+++ b/example/storybook/src/components/Center/index.stories.mdx
@@ -60,7 +60,8 @@ export default () => (
       },
       scope: {
         Wrapper,
-        CenterText,
+        Center,
+        Text,
       },
       argsType: {},
     }}
