feat: system ui specs docs mention

--- a/example/storybook/src/configuration/ThemeTokens/index.stories.mdx
+++ b/example/storybook/src/configuration/ThemeTokens/index.stories.mdx
@@ -9,7 +9,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Tokens
 
-Dank uses `tokens` to store design-related values such as `colors`, `typography`, `spacing`, and more. Tokens are a way of centralizing these values in a single location, making it easy to change and maintain the design of your application.
+Dank uses `tokens` to store design-related values such as `colors`, `typography`, `spacing`, and more. Tokens are a way of centralizing these values in a single location, making it easy to change and maintain the design of your application. We recommend trying to follow the [system-ui theme specification](https://github.com/system-ui/theme-specification) as closely as possible.
 
 To use theme tokens, you need to create a config object in `dank.config.ts/js` in your apps root, that contains all the design tokens you want to use in your application. Here is an example of a theme object:
 
