feat: checkbox and radio

--- a/example/storybook/src/components/Avatar/index.stories.mdx
+++ b/example/storybook/src/components/Avatar/index.stories.mdx
@@ -3,6 +3,7 @@ title: Avatar | UI
 description: Use the Avatar Component as a graphical representation of a person through a profile picture or image, an icon, or a string with initials.
 pageTitle: Avatar
 pageDescription: Use the Avatar Component as a graphical representation of a person through a profile picture or image, an icon, or a string with initials.
+showHeader: true
 ---
 
 import { Meta } from '@storybook/addon-docs';
