--- a/example/storybook/src/components/Button/index.stories.mdx
+++ b/example/storybook/src/components/Button/index.stories.mdx
@@ -3,6 +3,7 @@ title: Button | UI
 description: A Button component is used to create clickable elements that perform an action when pressed.
 pageTitle: Button
 pageDescription: A Button component is used to create clickable elements that perform an action when pressed.
+showHeader: true
 ---
 
 import { Meta } from '@storybook/addon-docs';
