--- a/example/storybook/src/components/Center/index.stories.mdx
+++ b/example/storybook/src/components/Center/index.stories.mdx
@@ -3,6 +3,7 @@ title: Center | UI
 description: This is a generic component for low level layout needs to center its children
 pageTitle: Center
 pageDescription: This is a generic component for low level layout needs to center its children.
+showHeader: true
 ---
 
 import { Meta } from '@storybook/addon-docs';
