--- a/example/storybook/src/components/Text/index.stories.mdx
+++ b/example/storybook/src/components/Text/index.stories.mdx
@@ -3,6 +3,7 @@ title: Text | UI
 description: Text allows the rendering of text and paragraphs within an interface
 pageTitle: Text
 pageDescription: Text allows the rendering of text and paragraphs within an interface.
+showHeader: true
 ---
 
 import { Meta } from '@storybook/addon-docs';
