--- a/example/storybook/src/components/Box/index.stories.mdx
+++ b/example/storybook/src/components/Box/index.stories.mdx
@@ -3,6 +3,7 @@ title: Box | UI
 description: This is a generic component for low level layout needs. It is similar to a div in HTML.
 pageTitle: Box
 pageDescription: This is a generic component for low level layout needs. It is similar to a div in HTML.
+showHeader: true
 ---
 
 import { Meta } from '@storybook/addon-docs';
