--- a/example/storybook/src/components/Link/index.stories.mdx
+++ b/example/storybook/src/components/Link/index.stories.mdx
@@ -3,6 +3,7 @@ title: Link | UI
 description: Link component is used to create a clickable hyperlink
 pageTitle: Link
 pageDescription: Link component is used to create a clickable hyperlink.
+showHeader: true
 ---
 
 import { Meta } from '@storybook/addon-docs';
