--- a/example/storybook/src/components/Switch/index.stories.mdx
+++ b/example/storybook/src/components/Switch/index.stories.mdx
@@ -3,6 +3,7 @@ title: Switch | UI
 description: The Switch provides an alternative to the Checkbox component. It also allows a user to switch between enabled or disabled states.
 pageTitle: Switch
 pageDescription: The Switch provides an alternative to the Checkbox component. It also allows a user to switch between enabled or disabled states.
+showHeader: true
 ---
 
 import { Meta } from '@storybook/addon-docs';
