feat: few components pushed

--- a/example/storybook/src/components/Box/index.stories.mdx
+++ b/example/storybook/src/components/Box/index.stories.mdx
@@ -13,12 +13,7 @@ import { useRef, useEffect, useState } from 'react';
 
 import { Box } from './Box';
 import { transformedCode } from '../../utils';
-import {
-  AppProvider,
-  CodePreview,
-  Table,
-  Text,
-} from '@gluestack/design-system';
+import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
 
 import { styled } from '@dank-style/react';
 
