--- a/example/storybook/src/components/Link/index.stories.mdx
+++ b/example/storybook/src/components/Link/index.stories.mdx
@@ -14,12 +14,7 @@ import { Link, LinkText } from './Link';
 import { transformedCode } from '../../utils';
 import Wrapper from '../Wrapper';
 
-import {
-  AppProvider,
-  CodePreview,
-  Table,
-  Text,
-} from '@gluestack/design-system';
+import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
 
 # Installation
 
