--- a/example/storybook/src/components/Radio/index.stories.mdx
+++ b/example/storybook/src/components/Radio/index.stories.mdx
@@ -147,7 +147,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     <Table.TBody>
       <Table.TR>
         <Table.TD>
-          <Text>value</Text>
+          <Text>
+            <code>value</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>string</Text>
@@ -192,7 +194,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isChecked</Text>
+          <Text>
+            <code>isChecked</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -210,7 +214,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isDisabled</Text>
+          <Text>
+            <code>isDisabled</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -224,7 +230,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isInvalid</Text>
+          <Text>
+            <code>isInvalid</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -238,7 +246,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isReadOnly</Text>
+          <Text>
+            <code>isReadOnly</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -252,7 +262,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isHovered</Text>
+          <Text>
+            <code>isHovered</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -266,7 +278,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isFocusVisible</Text>
+          <Text>
+            <code>isFocusVisible</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -280,7 +294,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isIndeterminate</Text>
+          <Text>
+            <code>isIndeterminate</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -342,7 +358,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     <Table.TBody>
       <Table.TR>
         <Table.TD>
-          <Text>value</Text>
+          <Text>
+            <code>value</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>string[]</Text>
@@ -356,7 +374,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>onChange</Text>
+          <Text>
+            <code>onChange</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>function</Text>
