--- a/example/storybook/src/components/Button/index.stories.mdx
+++ b/example/storybook/src/components/Button/index.stories.mdx
@@ -126,7 +126,9 @@ It inherits all the properties of React Native's [Pressable](https://reactnative
     <Table.TBody>
       <Table.TR>
         <Table.TD>
-          <Text>isLoading</Text>
+          <Text>
+            <code>isLoading</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -140,7 +142,9 @@ It inherits all the properties of React Native's [Pressable](https://reactnative
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isHovered</Text>
+          <Text>
+            <code>isHovered</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -154,7 +158,9 @@ It inherits all the properties of React Native's [Pressable](https://reactnative
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isPressed</Text>
+          <Text>
+            <code>isPressed</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -168,7 +174,9 @@ It inherits all the properties of React Native's [Pressable](https://reactnative
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isFocused</Text>
+          <Text>
+            <code>isFocused</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -182,7 +190,9 @@ It inherits all the properties of React Native's [Pressable](https://reactnative
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isDisabled</Text>
+          <Text>
+            <code>isDisabled</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -229,7 +239,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     <Table.TBody>
       <Table.TR>
         <Table.TD>
-          <Text>direction</Text>
+          <Text>
+            <code>direction</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>'column' or 'row'</Text>
@@ -243,7 +255,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isDisabled</Text>
+          <Text>
+            <code>isDisabled</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -259,7 +273,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isAttached</Text>
+          <Text>
+            <code>isAttached</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -275,7 +291,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>reversed</Text>
+          <Text>
+            <code>reversed</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -288,22 +306,6 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
         </Table.TD>
       </Table.TR>
     </Table.TBody>
-    <Table.TFoot>
-      <Table.TR>
-        <Table.TD>
-          <Text>reversed</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>To reverse the order of components</Text>
-        </Table.TD>
-      </Table.TR>
-    </Table.TFoot>
   </Table>
 </AppProvider>
 
