--- a/example/storybook/src/components/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Checkbox/index.stories.mdx
@@ -145,7 +145,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     <Table.TBody>
       <Table.TR>
         <Table.TD>
-          <Text>value</Text>
+          <Text>
+            <code>value</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>string</Text>
@@ -162,7 +164,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>onChange</Text>
+          <Text>
+            <code>onChange</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>function</Text>
@@ -176,7 +180,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>defaultIsChecked</Text>
+          <Text>
+            <code>defaultIsChecked</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -190,7 +196,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isChecked</Text>
+          <Text>
+            <code>isChecked</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -208,7 +216,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isDisabled</Text>
+          <Text>
+            <code>isDisabled</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -222,7 +232,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isInvalid</Text>
+          <Text>
+            <code>isInvalid</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -236,7 +248,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isReadOnly</Text>
+          <Text>
+            <code>isReadOnly</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -250,7 +264,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isHovered</Text>
+          <Text>
+            <code>isHovered</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -264,7 +280,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isFocusVisible</Text>
+          <Text>
+            <code>isFocusVisible</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -280,7 +298,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isIndeterminate</Text>
+          <Text>
+            <code>isIndeterminate</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>bool</Text>
@@ -342,7 +362,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     <Table.TBody>
       <Table.TR>
         <Table.TD>
-          <Text>value</Text>
+          <Text>
+            <code>value</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>string[]</Text>
@@ -356,7 +378,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>onChange</Text>
+          <Text>
+            <code>onChange</code>
+          </Text>
         </Table.TD>
         <Table.TD>
           <Text>function</Text>
