--- a/example/storybook/src/components/Switch/index.stories.mdx
+++ b/example/storybook/src/components/Switch/index.stories.mdx
@@ -12,12 +12,7 @@ import { Meta } from '@storybook/addon-docs';
 
 import { Switch } from './Switch';
 import { transformedCode } from '../../utils';
-import {
-  AppProvider,
-  CodePreview,
-  Table,
-  Text,
-} from '@gluestack/design-system';
+import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
 
 import { createSwitch } from '@gluestack-ui/switch';
 
