feat: checkbox and radio fix

--- a/example/storybook/src/components/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Checkbox/index.stories.mdx
@@ -10,13 +10,8 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title="components/Checkbox" />
 
-import {
-  Checkbox,
-  CheckIcon,
-  Center,
-  VStack,
-  Text as GluestackText,
-} from './Checkbox';
+import { Checkbox, CheckIcon, Center } from './Checkbox';
+import { VStack, Text as GluestackText } from './Checkbox';
 import { transformedCode } from '../../utils';
 import {
   AppProvider,
