--- a/example/storybook/src/components/Radio/index.stories.mdx
+++ b/example/storybook/src/components/Radio/index.stories.mdx
@@ -10,13 +10,9 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title="components/Radio" />
 
-import {
-  Radio,
-  CircleIcon,
-  Center,
-  VStack,
-  Text as GluestackText,
-} from './Radio';
+import { Radio, CircleIcon, Center } from './Radio';
+import { VStack, Text as GluestackText } from './Radio';
+
 import { useState } from 'react';
 import { transformedCode } from '../../utils';
 import {
